@@ -86,6 +86,19 @@
 #log_type information
 
 # ======================================================================
+# Bridges
+# ======================================================================
+
+# Experimental support for connecting multiple MQTT brokers together.
+# Specify multiple sets of connection, addresses and topic configurations.
+# Each connection should have a unique name, but this isn't enforced.
+# Only a single address per configuration is currently supported, unlike in
+# rsmb.
+#connection <name>
+#addresses <host>[:<port>]
+#topic <topic>
+
+# ======================================================================
 # Extensions
 # ======================================================================
 
